--- a/3d-rotation.html
+++ b/3d-rotation.html
@@ -10,3 +10,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    
+    <title>3D Rotative</title>
+    
+</head>
+
+<style>
+    * {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    html {
+        font-size: 62.5%;
+        background: #0011f8;
+        overflow-y: hidden;
+        font-family: lato;
+    }
+
+    body {
+        position: relative;
+    }
